# serializer version: 1
# name: TestOXDNAReading.test_comparing_topologies[top_new]
  list([
    list([
      1,
      2,
    ]),
    list([
      2,
      3,
    ]),
    list([
      3,
      4,
    ]),
    list([
      4,
      5,
    ]),
    list([
      5,
      6,
    ]),
    list([
      6,
      7,
    ]),
    list([
      7,
      8,
    ]),
    list([
      8,
      9,
    ]),
    list([
      9,
      10,
    ]),
    list([
      10,
      11,
    ]),
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new].1
  '''
  AttributeArray 'res_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int64)
  [ 1  2  3  4  5  6  7  8  9 10 11 12]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new].2
  '''
  AttributeArray 'chain_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int64)
  [0 0 0 0 0 0 0 0 0 0 0 0]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new].3
  '''
  AttributeArray 'res_name' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int64)
  [42 43 43 42 41 42 41 42 41 40 40 41]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom]
  list([
    list([
      5,
      6,
    ]),
    list([
      6,
      7,
    ]),
    list([
      7,
      8,
    ]),
    list([
      8,
      9,
    ]),
    list([
      9,
      10,
    ]),
    list([
      10,
      11,
    ]),
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom].1
  '''
  AttributeArray 'res_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int64)
  [ 1  2  3  4  5  6  7  8  9 10 11 12]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom].2
  '''
  AttributeArray 'chain_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int64)
  [0 0 0 0 0 0 1 1 1 1 1 1]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom].3
  '''
  AttributeArray 'res_name' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int64)
  [42 43 -1 42 41 42 41 42 41 -1 40 41]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old]
  list([
    list([
      0,
      1,
    ]),
    list([
      1,
      2,
    ]),
    list([
      2,
      3,
    ]),
    list([
      3,
      4,
    ]),
    list([
      4,
      5,
    ]),
    list([
      6,
      7,
    ]),
    list([
      7,
      8,
    ]),
    list([
      8,
      9,
    ]),
    list([
      9,
      10,
    ]),
    list([
      10,
      11,
    ]),
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old].1
  '''
  AttributeArray 'res_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int64)
  [ 1  2  3  4  5  6  7  8  9 10 11 12]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old].2
  '''
  AttributeArray 'chain_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int64)
  [0 0 0 0 0 0 1 1 1 1 1 1]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old].3
  '''
  AttributeArray 'res_name' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int64)
  [42 41 42 43 43 42 41 42 41 40 40 41]
  '''
# ---
# name: TestOXDNAReading.test_univ_snapshot
  '''
  AttributeArray 'position' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (98, 3), dtype: float64)
  [[-2.71388263e-01  3.47911656e-01  6.11712277e-01]
   [-2.84630984e-01  3.69316101e-01  5.72120309e-01]
   [-2.82102585e-01  4.00576025e-01  5.30809224e-01]
   [-2.70832449e-01  4.34485257e-01  4.95480150e-01]
   [-2.31383130e-01  4.62926298e-01  4.59322363e-01]
   [-1.86847687e-01  4.61400807e-01  4.27702725e-01]
   [-1.54825971e-01  4.52231020e-01  3.97049725e-01]
   [-1.39173135e-01  4.39387143e-01  3.42015833e-01]
   [-1.35349274e-01  4.16534990e-01  2.97673613e-01]
   [-1.60685733e-01  4.05478477e-01  2.47950748e-01]
   [-1.91200256e-01  4.21942145e-01  1.97663501e-01]
   [-1.58051297e-01  3.00995260e-01  9.02116820e-02]
   [-1.15155794e-01  2.84848601e-01  7.20954910e-02]
   [-7.68268630e-02  2.80517399e-01  4.11453247e-02]
   [-4.17247787e-02  3.01411241e-01  8.09974689e-03]
   [-1.25095369e-02  3.43652934e-01 -1.27206808e-02]
   [ 1.37416841e-02  3.84440631e-01 -1.57594681e-02]
   [ 5.44418357e-02  4.17307466e-01 -1.93634036e-03]
   [ 7.23587051e-02  4.44540977e-01  3.67471687e-02]
   [ 1.05468370e-01  4.60044473e-01  7.61714950e-02]
   [ 1.38794333e-01  4.51574326e-01  1.08472444e-01]
   [ 1.91637799e-01  4.48170274e-01  1.21294215e-01]
   [ 2.08654404e-01  4.42885607e-01  5.73711423e-03]
   [ 1.82659537e-01  4.02824968e-01  1.12674711e-02]
   [ 1.56348422e-01  3.65165323e-01  3.17045227e-02]
   [ 1.19972229e-01  3.37541968e-01  5.93418144e-02]
   [ 7.35565200e-02  3.36372942e-01  8.61576125e-02]
   [ 2.43721008e-02  3.54763031e-01  1.04543306e-01]
   [-1.83174144e-02  3.71033669e-01  1.00249864e-01]
   [-6.20853417e-02  3.90435785e-01  8.54545608e-02]
   [-9.74063873e-02  3.97339642e-01  3.86631005e-02]
   [-1.46003351e-01  3.81471634e-01  8.93878937e-03]
   [-1.69074252e-01  3.36272448e-01 -1.69322975e-02]
   [-2.07400903e-01  2.98696131e-01 -2.24687587e-02]
   [-2.33628854e-01  2.54772753e-01 -5.79261803e-04]
   [-2.72869676e-01  2.32246786e-01  3.22305672e-02]
   [-3.15265864e-01  2.33573914e-01  6.67049438e-02]
   [-3.51100922e-01  2.50701159e-01  1.00477032e-01]
   [-4.03845608e-01  2.76144594e-01  1.00194931e-01]
   [-4.59134877e-01  2.90238947e-01  9.66369659e-02]
   [-5.08887708e-01  2.93250471e-01  6.93662688e-02]
   [-5.41629016e-01  2.80998617e-01  3.39576714e-02]
   [-5.78666151e-01  2.46314436e-01  5.25932340e-03]
   [-5.99201977e-01  2.04484180e-01 -1.22238165e-02]
   [-5.99976957e-01  1.97342873e-01  1.10366821e-01]
   [-5.52732289e-01  1.82455257e-01  9.93461609e-02]
   [-5.09421170e-01  1.69205293e-01  7.28912354e-02]
   [-4.68840033e-01  1.83345228e-01  4.02206443e-02]
   [-4.34561938e-01  2.10119635e-01  1.06842043e-02]
   [-4.12315935e-01  2.54696101e-01 -1.49822235e-02]
   [-3.65274638e-01  2.91515172e-01 -2.26863865e-02]
   [-3.29649538e-01  3.31273645e-01 -3.41949472e-03]
   [-2.95392811e-01  3.52463156e-01  3.65554802e-02]
   [-2.59998530e-01  3.37433070e-01  7.18296096e-02]
   [-2.10960388e-01  3.16306889e-01  9.30572525e-02]
   [-2.05097780e-01  4.62624758e-01  1.63970187e-01]
   [-2.22922519e-01  5.06947935e-01  1.44141003e-01]
   [-2.29584888e-01  5.54162621e-01  1.39336020e-01]
   [-2.08076283e-01  6.13179386e-01  1.25674441e-01]
   [-1.70108423e-01  6.45758629e-01  1.17414474e-01]
   [-1.37502298e-01  6.73779488e-01  8.61358643e-02]
   [-9.91107970e-02  6.71406567e-01  5.32562248e-02]
   [-6.76181838e-02  6.75481021e-01  8.23135395e-03]
   [-6.37371093e-02  6.75940335e-01 -4.71260063e-02]
   [-7.76119232e-02  6.85631752e-01 -9.73979980e-02]
   [-9.40013900e-02  7.13662922e-01 -1.40989304e-01]
   [-1.02507018e-01  7.64922142e-01 -1.63161859e-01]
   [-7.98095688e-02  7.99588799e-01 -1.81388095e-01]
   [-1.58955768e-01  8.89685631e-01 -1.89514160e-01]
   [-1.39542773e-01  8.17060888e-01 -2.56206721e-01]
   [-1.81047440e-01  8.40452194e-01 -3.19605440e-01]
   [-1.38342664e-01  8.39913189e-01 -3.11776549e-01]
   [-9.04026031e-02  8.27594578e-01 -2.87306607e-01]
   [-5.98037727e-02  8.65924060e-01 -2.71931469e-01]
   [-6.23199455e-02  9.08705175e-01 -2.46067628e-01]
   [-5.45085929e-02  9.31161702e-01 -1.98259741e-01]
   [-6.16352074e-02  7.92320251e-01 -6.38076812e-02]
   [-1.04166411e-01  7.88188934e-01 -4.12326828e-02]
   [-1.51597977e-01  7.53139675e-01 -3.71364616e-02]
   [-1.75001904e-01  6.97391510e-01 -3.87260430e-02]
   [-1.84420779e-01  6.49588227e-01 -1.80526730e-02]
   [-1.72372818e-01  6.01659954e-01 -3.87458806e-03]
   [-1.52344510e-01  5.65441728e-01  2.29251869e-02]
   [-1.19978331e-01  5.61275899e-01  6.14589714e-02]
   [-1.09768294e-01  5.42448997e-01  1.05679706e-01]
   [-1.08989716e-01  5.34820378e-01  1.64060220e-01]
   [-1.15177922e-01  5.21439373e-01  2.13705823e-01]
   [-1.54155359e-01  5.22573113e-01  2.50326157e-01]
   [-1.96067438e-01  5.16410470e-01  2.79941559e-01]
   [-2.34693721e-01  4.87371266e-01  3.00014883e-01]
   [-2.56159604e-01  4.48695004e-01  3.37702960e-01]
   [-2.58582324e-01  3.97954941e-01  3.65650177e-01]
   [-2.44213298e-01  3.61743540e-01  4.08330172e-01]
   [-2.12174416e-01  3.45555127e-01  4.44438547e-01]
   [-1.82015225e-01  3.47569466e-01  4.81048584e-01]
   [-1.69140622e-01  3.69292468e-01  5.32089651e-01]
   [-1.70828253e-01  4.05665964e-01  5.72222531e-01]
   [-1.91259384e-01  4.38615620e-01  6.08279407e-01]]
  '''
# ---
# name: TestOXDNAReading.test_univ_snapshot.1
  '''
  AttributeArray 'res_name' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (98,), dtype: int64)
  [41 41 41 40 41 40 41 42 40 42 43 41 41 43 40 40 41 42 43 41 41 41 42 42
   42 40 41 42 43 43 40 42 42 43 42 40 43 40 41 42 43 42 42 42 41 41 41 40
   41 42 43 40 43 41 40 42 42 41 43 43 40 42 43 41 41 41 43 43 43 43 43 43
   43 43 43 43 42 42 42 40 41 43 40 40 42 41 41 40 41 43 41 42 43 42 43 42
   42 42]
  '''
# ---
# name: TestOXDNAReading.test_univ_snapshot.2
  '''
  AttributeArray 'res_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (98,), dtype: int64)
  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
   25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
   49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
   73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
   97 98]
  '''
# ---
# name: TestOXDNAReading.test_univ_snapshot.3
  '''
  AttributeArray 'chain_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (98,), dtype: int64)
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2
   2 2 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3]
  '''
# ---
